[gd_scene load_steps=3 format=3 uid="uid://djx50h4op6aek"]

[ext_resource type="Script" path="res://components/shooter.gd" id="1_40g0o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_drp3n"]
radius = 200.0

[node name="shooter" type="Node2D"]
script = ExtResource("1_40g0o")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_drp3n")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(200, 0)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
